# TanatosAPICdk

./: .gitignore  MigrationScripts.sql  README.md  TanatosAPI.sln
.github/workflows/: cdk-deploy.yml
Cdk/src/: Cdk.sln
InitialCreationLambda/: InitialCreationLambda.sln
InitialCreationLambda/InitialCreationLambda/: Function.cs  InitialCreationLambda.csproj
TanatosAPI/: Program.cs  TanatosAPI.csproj  TanatosAPI.http
TanatosAPI.Design/: DesignTimeDbContextFactory.cs  TanatosAPI.Design.csproj
TanatosAPI/Endpoints/: AuthEndpoints.cs  CategoriaNormaEndpoints.cs  TipoFiscalizadorEndpoints.cs  TipoPeriodicidadEndpoints.cs  TipoReceptorNotificacionEndpoints.cs  TipoUnidadTiempoEndpoints.cs
TanatosAPI/Helpers/: AllowAnonymousAuthenticationHandler.cs  AppJsonSerializerContext.cs  AuthApplyOperationFilter.cs  ConnectionStringHelper.cs  DatabaseConnectionHelper.cs  SecretManagerHelper.cs  VariableEntornoHelper.cs
TanatosAPI/Migrations/: 20251113165331_InitialCreation.Designer.cs  20251113165331_InitialCreation.cs  20251114215806_TablasTipo.Designer.cs  20251114215806_TablasTipo.cs  20251117132506_TablasTipo.Designer.cs  20251117132506_TablasTipo.cs  20251117144252_TablasTemplates.Designer.cs  20251117144252_TablasTemplates.cs  20251205214630_CorreccionVigencia.Designer.cs  20251205214630_CorreccionVigencia.cs  TanatosDbContextModelSnapshot.cs
TanatosAPI/Properties/: launchSettings.json
TanatosAPI/Repositories/: CategoriaNormaDao.cs  DestinatarioNotificacionDao.cs  InscripcionTemplateDao.cs  TemplateDao.cs  (+7 more)
api_authorizer/: Cargo.toml
api_authorizer/src/: main.rs
(+25 files in other folders)
