[package]
name = "api_authorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lambda_runtime = "1.0.1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
lazy_static = "1.5.0"
dotenvy = "0.15.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"